2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add -Wl,-melf_i386 and -Wl,-melf_x86_64 systematically
	when on x86 and not cygwin.
	* conf/Makefile.common: Remove unsystematic -Wl,-melf_i386 and
	-Wl,-melf_x86_64.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Set CPP to build one when checkoing for freetype for
	build.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c [!GRUB_BUILD]: Define my_argp_state.
	[!GRUB_BUILD]: Remove has_argument.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/ofpath.c (grub_util_devname_to_ofpath) [_WIN32]:
	Replace with a dummy.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Don't change host_os from mingw to cygwin.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Change target_os from windows to cygwin.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle grub-pe2elf and grub-mkfont for cases when build != host.

	* Makefile.am (build-grub-mkfont): Don't include gnulib.
	(build-grub-gen-asciih): Likewise.
	(build-grub-gen-widthspec): Likewise.
	* Makefile.util.def (grub-pe2elf): Remove.
	* config.h.in [GRUB_BUILD]: Use build rather than host constants.
	* configure.ac: Separate tests for build.
	Move ./build-grub-pe2elf to grub-core.
	Fix typo.
	* grub-core/Makefile.am (build-grub-pe2elf): New target.
	* grub-core/kern/emu/misc.c (xasprintf): Don't compile if GRUB_BUILD is
	defined.
	* include/grub/types.h [GRUB_BUILD]: Use build rather than host
	constants.
	* util/grub-mkfont.c [GRUB_BUILD]: Simplify not to rely on argp.
	* util/grub-pe2elf.c: Simplify not to rely on getopt.
	* util/misc.c (program_name) [GRUB_BUILD]: Define to static string.

2013-08-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_size): Adapt for
	mingw32 as well based on grub_util_get_disk_size.